--- a/MDK-ARM/STM32DBUSTest/STM32DBUSTest.build_log.htm
+++ b/MDK-ARM/STM32DBUSTest/STM32DBUSTest.build_log.htm
@@ -27,43 +27,36 @@ Project File Date:  10/13/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\MyProgramFiles\Engineering\Embedded\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32DBUSTest'
-compiling main.c...
+compiling dma.c...
+compiling stm32f4xx_hal_msp.c...
 compiling gpio.c...
 assembling startup_stm32f427xx.s...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling usart.c...
-compiling stm32f4xx_hal_msp.c...
-compiling startup.cpp...
 compiling stm32f4xx_it.c...
+compiling usart.c...
+compiling startup.cpp...
 compiling RC.cpp...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling dma.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_tim_ex.c...
 compiling stm32f4xx_hal_tim.c...
 compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_gpio.c...
+compiling main.c...
 compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_pwr.c...
 compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_pwr_ex.c...
 compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_cortex.c...
 compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_exti.c...
 compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_cortex.c...
 compiling stm32f4xx_hal_uart.c...
 linking...
-STM32DBUSTest\STM32DBUSTest.axf: Error: L6200E: Symbol RC::keys_ multiply defined (by startup.o and rc.o).
-STM32DBUSTest\STM32DBUSTest.axf: Error: L6200E: Symbol RC::mouse_ multiply defined (by startup.o and rc.o).
-STM32DBUSTest\STM32DBUSTest.axf: Error: L6200E: Symbol RC::rx_data_ multiply defined (by startup.o and rc.o).
-STM32DBUSTest\STM32DBUSTest.axf: Error: L6200E: Symbol RC::switch_ multiply defined (by startup.o and rc.o).
-STM32DBUSTest\STM32DBUSTest.axf: Error: L6200E: Symbol RC::channel_ multiply defined (by startup.o and rc.o).
-STM32DBUSTest\STM32DBUSTest.axf: Error: L6200E: Symbol RC::rx_buf_ multiply defined (by startup.o and rc.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 6 error messages.
-"STM32DBUSTest\STM32DBUSTest.axf" - 6 Error(s), 0 Warning(s).
+Program Size: Code=8966 RO-data=498 RW-data=12 ZI-data=1876  
+FromELF: creating hex file...
+"STM32DBUSTest\STM32DBUSTest.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -87,7 +80,6 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Target not created.
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
