--- a/MDK-ARM/STM32DBUSTest/STM32DBUSTest.build_log.htm
+++ b/MDK-ARM/STM32DBUSTest/STM32DBUSTest.build_log.htm
@@ -26,35 +26,11 @@ Project File Date:  10/13/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\MyProgramFiles\Engineering\Embedded\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'STM32DBUSTest'
-compiling dma.c...
-compiling stm32f4xx_hal_msp.c...
-compiling gpio.c...
-assembling startup_stm32f427xx.s...
-compiling stm32f4xx_it.c...
-compiling usart.c...
+Build target 'STM32DBUSTest'
 compiling startup.cpp...
 compiling RC.cpp...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling main.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_uart.c...
 linking...
-Program Size: Code=8966 RO-data=498 RW-data=12 ZI-data=1876  
+Program Size: Code=9006 RO-data=498 RW-data=12 ZI-data=1876  
 FromELF: creating hex file...
 "STM32DBUSTest\STM32DBUSTest.axf" - 0 Error(s), 0 Warning(s).
 
@@ -80,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
