--- a/MDK-ARM/STM32DBUSTest/STM32DBUSTest.htm
+++ b/MDK-ARM/STM32DBUSTest/STM32DBUSTest.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [STM32DBUSTest\STM32DBUSTest.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image STM32DBUSTest\STM32DBUSTest.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sun Oct 13 22:57:09 2024
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sun Oct 13 22:59:32 2024
 <BR><P>
 <H3>Maximum Stack Usage =        160 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -946,13 +946,13 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32f427xx.o(RESET)
 </UL>
+<P><STRONG><a name="[a8]"></a>RC_init()</STRONG> (Thumb, 58 bytes, Stack size 0 bytes, rc.o(.text._Z7RC_initv))
+<BR><BR>[Called By]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;startup
+</UL>
+
 <P><STRONG><a name="[91]"></a>RC::frameHandle()</STRONG> (Thumb, 356 bytes, Stack size 0 bytes, rc.o(.text._ZN2RC11frameHandleEv))
 <BR><BR>[Called By]<UL><LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_RxCpltCallback
 <LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UARTEx_RxEventCallback
-</UL>
-
-<P><STRONG><a name="[a8]"></a>RC::init()</STRONG> (Thumb, 28 bytes, Stack size 0 bytes, rc.o(.text._ZN2RC4initEv))
-<BR><BR>[Called By]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;startup
 </UL>
 
 <P><STRONG><a name="[73]"></a>main</STRONG> (Thumb, 26 bytes, Stack size 0 bytes, main.o(.text.main))
@@ -972,7 +972,7 @@ Global Symbols
 <BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = startup &rArr; HAL_UARTEx_ReceiveToIdle_DMA &rArr; HAL_DMA_Start_IT
 </UL>
 <BR>[Calls]<UL><LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UARTEx_ReceiveToIdle_DMA
-<LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RC::init()
+<LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RC_init()
 </UL>
 <BR>[Called By]<UL><LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
