--- a/MDK-ARM/STM32DBUSTest/STM32DBUSTest.htm
+++ b/MDK-ARM/STM32DBUSTest/STM32DBUSTest.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [STM32DBUSTest\STM32DBUSTest.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image STM32DBUSTest\STM32DBUSTest.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sun Oct 13 22:59:32 2024
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sun Oct 13 23:00:49 2024
 <BR><P>
 <H3>Maximum Stack Usage =        160 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -789,7 +789,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_DMA_Start_IT
 </UL>
 <BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UARTEx_RxEventCallback
-<LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;startup
+<LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RC_init()
 </UL>
 
 <P><STRONG><a name="[8f]"></a>HAL_UARTEx_RxEventCallback</STRONG> (Thumb, 78 bytes, Stack size 16 bytes, rc.o(.text.HAL_UARTEx_RxEventCallback))
@@ -946,8 +946,12 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32f427xx.o(RESET)
 </UL>
-<P><STRONG><a name="[a8]"></a>RC_init()</STRONG> (Thumb, 58 bytes, Stack size 0 bytes, rc.o(.text._Z7RC_initv))
-<BR><BR>[Called By]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;startup
+<P><STRONG><a name="[a7]"></a>RC_init()</STRONG> (Thumb, 88 bytes, Stack size 8 bytes, rc.o(.text._Z7RC_initv))
+<BR><BR>[Stack]<UL><LI>Max Depth = 48<LI>Call Chain = RC_init() &rArr; HAL_UARTEx_ReceiveToIdle_DMA &rArr; HAL_DMA_Start_IT
+</UL>
+<BR>[Calls]<UL><LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UARTEx_ReceiveToIdle_DMA
+</UL>
+<BR>[Called By]<UL><LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;startup
 </UL>
 
 <P><STRONG><a name="[91]"></a>RC::frameHandle()</STRONG> (Thumb, 356 bytes, Stack size 0 bytes, rc.o(.text._ZN2RC11frameHandleEv))
@@ -958,7 +962,7 @@ Global Symbols
 <P><STRONG><a name="[73]"></a>main</STRONG> (Thumb, 26 bytes, Stack size 0 bytes, main.o(.text.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 160<LI>Call Chain = main &rArr; SystemClock_Config &rArr; HAL_RCC_ClockConfig &rArr; HAL_RCC_GetSysClockFreq &rArr; __aeabi_uldivmod
 </UL>
-<BR>[Calls]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;startup
+<BR>[Calls]<UL><LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;startup
 <LI><a href="#[a1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MX_USART1_UART_Init
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MX_DMA_Init
 <LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MX_GPIO_Init
@@ -968,11 +972,10 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
 
-<P><STRONG><a name="[a7]"></a>startup</STRONG> (Thumb, 36 bytes, Stack size 0 bytes, startup.o(.text.startup))
-<BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = startup &rArr; HAL_UARTEx_ReceiveToIdle_DMA &rArr; HAL_DMA_Start_IT
+<P><STRONG><a name="[a8]"></a>startup</STRONG> (Thumb, 4 bytes, Stack size 0 bytes, startup.o(.text.startup))
+<BR><BR>[Stack]<UL><LI>Max Depth = 48<LI>Call Chain = startup &rArr; RC_init() &rArr; HAL_UARTEx_ReceiveToIdle_DMA &rArr; HAL_DMA_Start_IT
 </UL>
-<BR>[Calls]<UL><LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UARTEx_ReceiveToIdle_DMA
-<LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RC_init()
+<BR>[Calls]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RC_init()
 </UL>
 <BR>[Called By]<UL><LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
