关掉o3，万事大吉（恼

--- a/MDK-ARM/STM32DBUSTest/STM32DBUSTest.build_log.htm
+++ b/MDK-ARM/STM32DBUSTest/STM32DBUSTest.build_log.htm
@@ -22,39 +22,15 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 E:\Work\EmbeddedProjects\ProgramingProjects\STM32DBUSTest\MDK-ARM\STM32DBUSTest.uvprojx
-Project File Date:  10/13/2024
+Project File Date:  10/14/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\MyProgramFiles\Engineering\Embedded\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'STM32DBUSTest'
-compiling dma.c...
-compiling main.c...
-compiling gpio.c...
-assembling startup_stm32f427xx.s...
-compiling stm32f4xx_it.c...
-compiling usart.c...
-compiling stm32f4xx_hal_msp.c...
-compiling RC.cpp...
+Build target 'STM32DBUSTest'
 compiling startup.cpp...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_exti.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_uart.c...
+compiling RC.cpp...
 linking...
-Program Size: Code=9030 RO-data=498 RW-data=12 ZI-data=1884  
+Program Size: Code=12688 RO-data=500 RW-data=12 ZI-data=24924  
 FromELF: creating hex file...
 "STM32DBUSTest\STM32DBUSTest.axf" - 0 Error(s), 0 Warning(s).
 
@@ -80,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
